[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 224.0
margin_top = 40.0
margin_right = 262.0
margin_bottom = 60.0
text = "Play"

[node name="PlayButton2" type="Button" parent="."]
margin_left = 344.0
margin_top = 40.0
margin_right = 432.0
margin_bottom = 60.0
disabled = true
text = "Play Level 2"

[node name="PlayButton3" type="Button" parent="."]
margin_left = 496.0
margin_top = 40.0
margin_right = 584.0
margin_bottom = 60.0
disabled = true
text = "Play Level 3"

[node name="QuitButton" type="Button" parent="."]
margin_left = 224.0
margin_top = 104.0
margin_right = 264.0
margin_bottom = 124.0
text = "Quit"

[connection signal="ready" from="." to="." method="_on_Control_ready"]
[connection signal="button_down" from="PlayButton" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="PlayButton2" to="." method="_on_PlayButton2_button_down"]
[connection signal="button_down" from="PlayButton3" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="QuitButton" to="." method="_on_Quit_button_down"]
